feat: Add password reset functionality and improve API key handling
Introduces password reset screens and logic for both Tamil and English languages. Enhances API key handling in `geminiService.ts` and `components/Dashboard.tsx` to safely access `process.env.API_KEY`, preventing errors in environments where `process` is undefined. Also includes minor updates to manifest.json and index.html for better PWA integration and a small polyfill for `process`.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/3045/3045388.png">
     <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/3045/3045388.png">
     
+    <script>
+      // Polyfill process for browser environment to prevent 'process is not defined' errors
+      if (typeof process === 'undefined') {
+        window.process = { env: {} };
+      }
+    </script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Mukta+Malar:wght@300;400;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
