feat: Update app icon to local logo
Replaces external CDN links for the favicon and Apple touch icon with a local `logo.png` file. This improves performance and ensures the app icon is consistently served.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     
     <title>Viyabaari - Tamil Business Manager</title>
     <link rel="manifest" href="./manifest.json">
-    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/3045/3045388.png">
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/3045/3045388.png">
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
     
     <script>
       // Polyfill process for browser environment to prevent 'process is not defined' errors
